2024-05-02T00:53:08Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8916979404 # 234
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-02
* notice: last 14d: unq all: 2 3
* notice: prev accum: outdated-unq outdated-all / unq all: 642 1105 / 645 1110
* notice: next accum: outdated-unq outdated-all / unq all: 643 1107 / 645 1110
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-04-17] / []

2024-04-30T16:15:16Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8898158463 # 230
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-30
* notice: last 14d: unq all: 2 5
* notice: prev accum: outdated-unq outdated-all / unq all: 641 1103 / 645 1110
* notice: next accum: outdated-unq outdated-all / unq all: 642 1105 / 645 1110
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-04-16] / []

2024-04-29T16:14:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8881879563 # 227
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-29
* notice: last 14d: unq all: 3 7
* notice: prev accum: outdated-unq outdated-all / unq all: 640 1102 / 645 1110
* notice: next accum: outdated-unq outdated-all / unq all: 641 1103 / 645 1110
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-04-15] / []

2024-04-29T00:54:14Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8871733381 # 225