@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-05-02T00:53:08Z",
-  "count_outdated" : 1107,
-  "uniques_outdated" : 643,
+  "timestamp" : "2024-05-02T08:15:19Z",
+  "count_outdated" : 1108,
+  "uniques_outdated" : 644,
   "count" : 1110,
   "uniques" : 645,
   "clones" : [
-    {
-      "timestamp": "2024-04-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-04-24T00:00:00Z",
       "count": 2,
