@@ -1,3 +1,12 @@
+2024-05-02T08:15:19Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8920733351 # 235
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-02
+* notice: last 14d: unq all: 1 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 643 1107 / 645 1110
+* notice: next accum: outdated-unq outdated-all / unq all: 644 1108 / 645 1110
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-04-18] / []
+
 2024-05-02T00:53:08Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8916979404 # 234
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-02
